#2 automated dropping of disk cache in linux when running as root